<resources>
    <string name="app_name">ConnectFour</string>

    <string name="hint_ip">Server IP</string>
    <string name="hint_port">Port</string>
    <string name="hint_username">Username</string>
    <string name="action_connect">Connect</string>
    <string name="label_players">Available players</string>

    <string name="status_connecting">Connecting to %1$s:%2$d…</string>
    <string name="status_registering">Connected. Registering as %1$s…</string>
    <string name="status_registered">Registered as %1$s</string>
    <string name="status_invite_sent">Invitation sent to %1$s…</string>
    <string name="status_invite_declined">Invitation declined. Choose another player.</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_error">Error: %1$s</string>

    <string name="error_missing_fields">Enter IP, port and username</string>
    <string name="error_invalid_port">Invalid port</string>

    <string name="invite_title">Game invitation</string>
    <string name="invite_message">%1$s wants to play. Accept?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="game_header">You are %1$s  •  vs %2$s</string>
    <string name="status_your_turn">Your turn</string>
    <string name="status_their_turn">Waiting for %1$s…</string>
    <string name="warn_not_your_turn">Wait for your opponent to play</string>
    <string name="warn_column_full">That column is full</string>
    <string name="game_over_title">Game over</string>
    <string name="result_you_won">You won!</string>
    <string name="result_you_lost">%1$s won</string>
    <string name="result_draw">It\'s a draw</string>
    <string name="play_again">Play again</string>
    <string name="browse_players">Browse players</string>
    <string name="status_waiting_rematch">Waiting for %1$s to accept…</string>
    <string name="rematch_title">Rematch</string>
    <string name="rematch_message">%1$s wants a rematch. Accept?</string>
</resources>
